style.css
* {
    padding: 0;
    margin: 0;
    font-family: "Roboto", "Courier New";
}

.flex-container {
    padding: 20px 10%;
    display: flex;
    justify-content: space-between;
}

.navbar {
    color: #f9faf8;
    background-color: #1f2937;
}

.navbar strong {
    font-size: 24px;
}

.navbar a {
    font-size: 18px;
    color: #e5e7eb;
    text-decoration: none;
    margin-right: 30px;
}

.top {
    color: #f9faf8;
    background-color: #1f2937;
    padding: 100px 10%;
}

.top h1 {
    font-size: 48px;
    font-weight: 900;
}

.top p {
    font-size: 18px;
    color: #e5e7eb;
    margin-bottom: 10px;
}

.top button {
    background-color: #3882f6;
    border-color: #3882f6;
    color: #f9faf8;
    width: 125px;
    height: 30px;
    border-radius: 8px;
}

.top div {
    flex: 1;
    margin-right: 50px;
}

#placeholder-image {
    flex: 1;
    background-color: #6d747d;
    margin-right: 25px;
    display: flex;
    justify-content: center;
    align-items: center;
}

.info {
    flex-direction: column;
    align-items: center;
}

.info h1 {
    color: #1f2937;
    font-size: 36px;
    font-weight: 900;
    margin: 25px auto;
}

.info div {
    display: flex;
    flex-direction: row;
    justify-content: space-between;
}

.info .info-box {
    flex: 1;
    width: 150px;
    height: 150px;
    border: 2px solid #3882f6;
    border-radius: 8px;
    margin: auto 20px;
}

.info .info-box p {
    margin-top: 150px;
    text-align: center;
    color: #6d747d;
}

